--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Elevate | Premium Fitness Studio</title>
-    <meta name="description" content="Elevate Fitness Studio - Transform your body and mind with our premium fitness programs and expert trainers." />
-    <meta name="keywords" content="fitness, gym, workout, personal training, yoga, hiit, strength training" />
+    <title>Venkat's Fit Zone | Premium Fitness Studio</title>
+    <meta name="description" content="Venkat's Fit Zone - Transform your body and mind with our premium fitness programs and expert trainers in a state-of-the-art facility." />
+    <meta name="keywords" content="fitness, gym, workout, personal taining, yoga, hiit, strength training, health, wellness, studio" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://venkatsfitzone.com/" />
+    <meta name="theme-color" content="#22223b" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Venkat's Fit Zone | Premium Fitness Studio" />
+    <meta property="og:description" content="Transform your body and mind with our premium fitness programs and expert trainers." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://venkatsfitzone.com/" />
+    <meta property="og:image" content="https://venkatsfitzone.com/og-image.jpg" />
+    <!-- Twitter Card Meta Tags -->
+   
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Structured Data: LocalBusiness -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "HealthClub",
+        "name": "Venkat's Fit Zone",
+        "url": "https://venkatsfitzone.netlify.app/",
+        "logo": "https://venkatsfitzone.netlify.app/logo.png",
+        "description": "Premium fitness studio offering personal training, yoga, HIIT, and more.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Opp Gromour Boys Hostel Vijayawada Road,Mylavaram",
+          "addressLocality": "Mylavaram",
+          "addressRegion": "AP"
+          "postalCode": "521230",
+          "addressCountry": "INDIA"
+        },
+        "telephone": "+91-8247636831"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
