--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Venkat's Fit Zone - Transform your body and mind with our premium fitness programs and expert trainers in a state-of-the-art facility." />
     <meta name="keywords" content="fitness, gym, workout, personal taining, yoga, hiit, strength training, health, wellness, studio" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://venkatsfitzone.com/" />
+    <link rel="canonical" href="https://venkatfitzone.netlify.com/" />
     <meta name="theme-color" content="#22223b" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <!-- Open Graph Meta Tags -->
