--- a/client/index.html
+++ b/client/index.html
@@ -7,15 +7,15 @@
     <meta name="description" content="Venkat's Fit Zone - Transform your body and mind with our premium fitness programs and expert trainers in a state-of-the-art facility." />
     <meta name="keywords" content="fitness, gym, workout, personal taining, yoga, hiit, strength training, health, wellness, studio" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://venkatfitzone.netlify.com/" />
+    <link rel="canonical" href="https://venkatfitzone.netlify.app/" />
     <meta name="theme-color" content="#22223b" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Venkat's Fit Zone | Premium Fitness Studio" />
     <meta property="og:description" content="Transform your body and mind with our premium fitness programs and expert trainers." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://venkatsfitzone.com/" />
-    <meta property="og:image" content="https://venkatsfitzone.com/og-image.jpg" />
+    <meta property="og:url" content="https://venkatfitzone.netlify.app/" />
+    <meta property="og:image" content="https://venkatfitzone.netlify.app/og-image.jpg" />
     <!-- Twitter Card Meta Tags -->
    
     <!-- Fonts -->
