--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://venkatfitzone.netlify.app/" />
     <meta property="og:image" content="https://venkatfitzone.netlify.app/og-image.jpg" />
     <!-- Twitter Card Meta Tags -->
-   
+   <meta name="google-site-verification" content="r-mwyqjJ1TaStS15R-grZ1tGf-Nn5UTxmsSD2mDLVIk" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
